# monowire

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: common.cmake  monowire-config.cmake.in  monowire.pc.in
common/: CMakeLists.txt  arg.cpp  arg.h  build-info.cpp.in  build-info.h  chat-auto-parser-generator.cpp  chat.cpp  chat.h  common.cpp  common.h  console.cpp  console.h  download.cpp  fit.cpp  fit.h  hf-cache.cpp  http.h  json-partial.cpp  json-schema-to-grammar.cpp  llguidance.cpp  ngram-cache.cpp  ngram-cache.h  ngram-map.cpp  ngram-map.h  ngram-mod.h  preset.cpp  preset.h  reasoning-budget.cpp  reasoning-budget.h  sampling.cpp  sampling.h  speculative.cpp  speculative.h
common/jinja/: README.md
ggml/: CMakeLists.txt
ggml/include/: ggml.h
ggml/src/: ggml-backend-meta.cpp  ggml-backend.cpp  ggml.c
ggml/src/ggml-cann/: aclnn_ops.cpp  ggml-cann.cpp
ggml/src/ggml-cpu/: arch-fallback.h  ggml-cpu-impl.h  ggml-cpu.c  ops.cpp  simd-mappings.h  vec.cpp  vec.h
ggml/src/ggml-cuda/: cumsum.cu  fattn-common.cuh  ggml-cuda.cu  mean.cu  mmq.cu  mmvq.cu  topk-moe.cu
ggml/src/ggml-hexagon/htp/: act-ops.c  main.c
ggml/src/ggml-metal/: ggml-metal-common.cpp  ggml-metal-device.m  ggml-metal-ops.cpp  ggml-metal.cpp
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-openvino/: ggml-decoder.cpp
ggml/src/ggml-openvino/openvino/op/: set_rows.cpp  view.cpp
ggml/src/ggml-rpc/: ggml-rpc.cpp
ggml/src/ggml-sycl/: CMakeLists.txt  ggml-sycl.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: flash_attn.comp  flash_attn_base.glsl  multi_add.comp  vulkan-shaders-gen.cpp
ggml/src/ggml-webgpu/: ggml-webgpu-shader-lib.hpp  ggml-webgpu.cpp
ggml/src/ggml-webgpu/wgsl-shaders/: mul_mat_subgroup_matrix.wgsl
ggml/src/ggml-zdnn/: ggml-zdnn.cpp
include/: monowire-cpp.h  monowire.h
scripts/: format.py  json_schema_to_grammar.py  run-tests.sh
src/: CMakeLists.txt  monowire-adapter.cpp  monowire-adapter.h  monowire-arch.cpp  monowire-arch.h  monowire-batch.cpp  monowire-batch.h  monowire-chat.cpp  monowire-chat.h  monowire-context.cpp  monowire-context.h  monowire-cparams.cpp  monowire-cparams.h  monowire-ext.h  monowire-grammar.cpp  monowire-grammar.h  monowire-graph.cpp  monowire-graph.h  monowire-hparams.cpp  monowire-hparams.h  monowire-impl.cpp  monowire-impl.h  monowire-io.cpp  monowire-io.h  monowire-kv-cache-iswa.cpp  monowire-kv-cache-iswa.h  monowire-kv-cache.cpp  monowire-kv-cache.h  monowire-kv-cells.h  monowire-memory-hybrid-iswa.cpp  monowire-memory-hybrid-iswa.h  monowire-memory-hybrid.cpp  monowire-memory-hybrid.h  monowire-memory-recurrent.cpp  monowire-memory-recurrent.h  monowire-memory.cpp  monowire-memory.h  monowire-mmap.cpp  monowire-mmap.h  monowire-model-loader.cpp  (+17 more)
src/models/: afmoe.cpp  apertus.cpp  arcee.cpp  arctic.cpp  arwkv7.cpp  baichuan.cpp  bailingmoe.cpp  bailingmoe2.cpp  bert.cpp  bitnet.cpp  bloom.cpp  chameleon.cpp  chatglm.cpp  codeshell.cpp  cogvlm.cpp  cohere2-iswa.cpp  command-r.cpp  dbrx.cpp  deci.cpp  deepseek.cpp  deepseek2.cpp  delta-net-base.cpp  dots1.cpp  dream.cpp  ernie4-5-moe.cpp  ernie4-5.cpp  eurobert.cpp  exaone-moe.cpp  exaone.cpp  exaone4.cpp  falcon-h1.cpp  falcon.cpp  gemma-embedding.cpp  gemma.cpp  gemma2-iswa.cpp  gemma3.cpp  gemma3n-iswa.cpp  gemma4-iswa.cpp  glm4-moe.cpp  glm4.cpp  (+74 more)
tests/: CMakeLists.txt  test-arg-parser.cpp  test-autorelease.cpp  test-backend-ops.cpp  test-backend-sampler.cpp  test-c.c  test-chat-peg-parser.cpp  test-chat-template.cpp  test-grammar-integration.cpp  test-grammar-parser.cpp  test-json-partial.cpp  test-json-schema-to-grammar.cpp  test-model-load-cancel.cpp  test-monowire-archs.cpp  test-monowire-grammar.cpp  test-monowire-streaming.cpp  test-peg-parser.cpp  test-reasoning-budget.cpp  test-sampling.cpp  test-state-restore-fragmented.cpp  test-thread-safety.cpp  test-tokenizer-0.cpp  test-tokenizer-1-spm.cpp
tools/: CMakeLists.txt
tools/completion/: CMakeLists.txt  README.md  completion.cpp
tools/monowire-bench/: CMakeLists.txt  README.md  monowire-bench.cpp
tools/quantize/: CMakeLists.txt  README.md  quantize.cpp  tests.sh
